--- a/test/fixtures/book_authors.yml
+++ b/test/fixtures/book_authors.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  book: one
+  author: one
 
 two:
-  title: MyString
+  book: two
+  author: two
