--- a/test/fixtures/books_genres.yml
+++ b/test/fixtures/books_genres.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  book: one
+  genre: one
 
 two:
-  title: MyString
+  book: two
+  genre: two
